interpreter/examples/good/less_simple/function_assignment2.dl
// should output 2
{
    function f(ref x) x = 1,
    function g(ref x) x = 2,
    int x,
    int y
    .
    f = g;
    y = f(x);
    print x
}
