interpreter/examples/bad/type/recursion.dl
// bad functional recursion

{
    function f(fun g) {
        int x.
        x = f(f)
    }
}
